# calculator_raylib

./: .clang-format  .gitignore  CMakeLists.txt  EMBEDDING_RESOURCES.md  LICENSE  README.md  bashg.sh  build.bat  build.sh  build_macos.sh  generate_embedded_resources.bat
.github/workflows/: cmake-multi-platform.yml
cmake/: compilers.cmake  linux.cmake  macos.cmake  platforms.cmake  resources.cmake  windows.cmake
includes/: button.h  calculator.h  constants.h  display.h  embedded_resources.h  font_ubuntu.h  icon_calc.h  metrics.h  parser.h  theme.h
raylib/src/: config.h
src/: button.cpp  button.h  calculator.cpp  display.cpp  fix_generated_headers.cpp  main.cpp  metrics.cpp  parser.cpp  resource_exporter.cpp  theme.cpp  winmain.cpp
